[project]
name = "safe-chat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-lg",
    "litellm[proxy]>=1.88.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "presidio-analyzer",
    "presidio-anonymizer",
    "prisma>=0.15.0",
    "streamlit>=1.58.0",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "presidio/presidio-anonymizer",
    "presidio/presidio-analyzer",
]

[tool.uv.sources]
presidio-analyzer = { workspace = true, editable = true }
presidio-anonymizer = { workspace = true, editable = true }
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

